[project]
name = "reel-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.39.0",
    "yt-dlp>=2025.10.14",
]
